manifests/monitoring/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-system
  labels:
    name: monitoring-system
